<package format="2">
    <name>map_server</name>
    <version>2.0.0</version>
    <description>Updated Map Server to support map changes</description>
    <author>Jason Wang</author>
    <maintainer email="jiashen.wang@rapyuta-robotics.ca">Jason Wang</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>bullet</depend>
    <depend>nav_msgs</depend>
    <depend>roscpp</depend>
    <depend>sdl</depend>
    <depend>sdl-image</depend>
    <depend>tf2</depend>
    <depend>yaml-cpp</depend>
    <depend>rr_common_config</depend>

    <test_depend>rospy</test_depend>
    <test_depend>rostest</test_depend>
    <test_depend>rosunit</test_depend>
</package>
